--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
     "@prisma/client": "^5.6.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.1",
+    "next-auth": "^5.0.0-beta.3",
     "react": "18",
     "react-dom": "18",
     "react-icons": "^4.11.0",
