--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@next/eslint-plugin-next": "14.0.1",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
+    "mongoose": "^8.0.1",
     "next": "14.0.1",
     "next-auth": "^5.0.0-beta.3",
+    "node-fetch": "^3.3.2",
     "react": "18",
     "react-dom": "18",
     "react-icons": "^4.11.0",
